# SecureMessenger-R2F-Server

./: .gitignore  CMakeLists.txt  R2F-MessengerServer.pro  build.sh  qml.qrc
include/: BackEnd.h  CommandLineOptions.h  ConnectedClientManager.h  Database.h  Logger.h  LoggerFactory.h  MessageProcessor.h  PacketAnalyzer.h  ServerManager.h  SessionKey.h  TcpDumpManager.h  messagecode.h  server.h  stdafx.h
qml/: BetterButton.qml  LayoutSection.qml  main.qml
src/: BackEnd.cpp  CommandLineOptions.cpp  ConnectedClientManager.cpp  Database.cpp  Logger.cpp  LoggerFactory.cpp  MessageProcessor.cpp  PacketAnalyzer.cpp  ServerManager.cpp  SessionKey.cpp  TcpDumpManager.cpp  main.cpp  server.cpp
